[gd_scene load_steps=4 format=3 uid="uid://ysinj74rhda8"]

[ext_resource type="Script" path="res://scripts/screens/pause.gd" id="2_3w2so"]
[ext_resource type="PackedScene" uid="uid://tv7ha8ik8dmq" path="res://scenes/gui/default/label_title_default.tscn" id="3_3dcas"]
[ext_resource type="PackedScene" uid="uid://cfun5jfkr0e74" path="res://scenes/gui/default/button_default.tscn" id="4_n2i4n"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_3w2so")

[node name="Filter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.729412)

[node name="Title" parent="Filter" instance=ExtResource("3_3dcas")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -258.5
offset_right = 258.5
grow_horizontal = 2
text = "$_PAUSE"

[node name="VBoxContainer" type="VBoxContainer" parent="Filter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -66.0
offset_right = 50.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Resume" parent="Filter/VBoxContainer" instance=ExtResource("4_n2i4n")]
layout_mode = 2
text = "$_RESUME"

[node name="MainMenu" parent="Filter/VBoxContainer" instance=ExtResource("4_n2i4n")]
layout_mode = 2
text = "$_MAIN_MENU"

[node name="Exit" parent="Filter/VBoxContainer" instance=ExtResource("4_n2i4n")]
layout_mode = 2
text = "$_EXIT"

[connection signal="pressed" from="Filter/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Filter/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Filter/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
